Finally figured out find_max_value

--- a/HW_3_Helpful_Hints.ipynb
+++ b/HW_3_Helpful_Hints.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -481,23 +481,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (2%2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -506,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +519,6 @@
     "    for line in file: \n",
     "        count = count + 1\n",
     "        if count%3 == 0:\n",
-    "        ##If [counter variable] % [some number] == [some number]: \n",
     "            print(line)"
    ]
   },
@@ -555,23 +537,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
+      "12\n"
      ]
     }
    ],
    "source": [
     "with open(filename) as file: \n",
     "    ##Here: Initialize a counter variable to do your counting\n",
-    "    count = 0\n",
+    "    count = 1\n",
     "    ##Here: Initialize a second variable to store the largest number\n",
-    "    largest_number = \n",
+    "    largest_number = 1\n",
     "    for line in file: \n",
     "        ##Here: Increment your counter by 1\n",
     "        count = count + 1\n",
